Add dev dependency on GLFW bindings
Using GLFW to create an OpenGL context for tests.

--- a/shard.yml
+++ b/shard.yml
@@ -11,6 +11,9 @@ development_dependencies:
   ameba:
     github: crystal-ameba/ameba
     version: ~> 0.11.0
+  glfw:
+    gitlab: arctic-fox/glfw.cr
+    branch: master
 
 dependencies:
   opengl:
