--- a/shard.yml
+++ b/shard.yml
@@ -7,19 +7,19 @@ authors:
 development_dependencies:
   spectator:
     gitlab: arctic-fox/spectator
-    branch: master
+    version: ~> 0.9.34
   ameba:
     github: crystal-ameba/ameba
-    version: ~> 0.11.0
+    version: ~> 0.14.1
   glfw:
     gitlab: arctic-fox/glfw.cr
-    branch: master
+    version: 3.3.1
 
 dependencies:
   opengl:
     gitlab: arctic-fox/opengl.cr
     branch: gl-4.5-core
 
-crystal: 0.33.0
+crystal: 1.0.0
 
 license: MIT
