--- a/.guardian.yml
+++ b/.guardian.yml
@@ -7,5 +7,8 @@ run: bin/ameba %file%
 files: ./spec/**/*.cr
 run: crystal spec %file%
 ---
+files: ./**/*.cr
+run: crystal tool format --check %file%
+---
 files: ./shard.yml
 run: shards
