--- a/shard.yml
+++ b/shard.yml
@@ -4,6 +4,11 @@ version: 0.2.0
 authors:
   - Michael Miller <icy.arctic.fox@gmail.com>
 
+dependencies:
+  opengl:
+    gitlab: arctic-fox/opengl.cr
+    branch: gl-4.6-core
+
 development_dependencies:
   spectator:
     gitlab: arctic-fox/spectator
@@ -13,12 +18,7 @@ development_dependencies:
     version: ~> 0.14.1
   glfw:
     gitlab: arctic-fox/glfw.cr
-    version: 3.3.1
-
-dependencies:
-  opengl:
-    gitlab: arctic-fox/opengl.cr
-    branch: gl-4.6-core
+    version: ~> 3.3.1
 
 crystal: 1.0.0
 
