Add some examples from learnopengl.com

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@
 /.shards/
 *.dwarf
 
+/examples/**/docs/
+/examples/**/lib/
+/examples/**/bin/
+/examples/**/.shards/
+
 # Libraries don't need dependency lock
 # Dependencies will be locked in applications that use them
 /shard.lock
