Support loading and testing with SDL

--- a/shard.yml
+++ b/shard.yml
@@ -19,6 +19,9 @@ development_dependencies:
   glfw:
     gitlab: arctic-fox/glfw.cr
     version: ~> 3.3.2
+  sdl:
+    github: ysbaddaden/sdl.cr
+    version: ~> 0.1.0
 
 crystal: 1.1.0
 
