--- a/examples/learnopengl.com/01-getting-started/07-camera/shard.yml
+++ b/examples/learnopengl.com/01-getting-started/07-camera/shard.yml
@@ -8,7 +8,7 @@ authors:
 dependencies:
   geode:
     gitlab: arctic-fox/geode
-    branch: master # TODO: Reference tag once projections are fully implemented.
+    version: ~> 0.2.1
   gloop:
     path: ../../../../
   opengl:
